.k8s/redirect-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bl8-redirect
  namespace: bl8
spec:
  type: ClusterIP
  selector:
    app: bl8-redirect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
