.k8s/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bl8-ui
  namespace: bl8
spec:
  type: ClusterIP
  selector:
    app: bl8-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
